property-view: set single-paragraph mode on the text renderer

This makes it consistent with the entry view, which sets single
paragraph mode to handle comment tags containing newlines.

https://bugzilla.gnome.org/show_bug.cgi?id=789155